[project]
name = "pbirestpy"
version = "0.1.0"
description = "A Python client for Power BI REST API"
authors = [{ name="GuangJun Liang", email="guangjun_l@icloud.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["powerbi", "rest api", "client", "async"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/yourname/pbirestx"
"Bug Tracker" = "https://github.com/yourname/pbirestx/issues"

[tool.setuptools.packages.find]
where = ["pbirestpy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
